[workspace]

[package]
name = "xlsynth-mcmc-pir-fuzz"
edition = "2024"
publish = false

[package.metadata]
fuzz = true
cargo-fuzz = true

[dependencies]
blake3 = "1"
env_logger = "0.11"
libfuzzer-sys = "0.4"
log = "0.4"
rand = "0.8"
xlsynth = { path = "../../xlsynth" }
xlsynth-mcmc-pir = { path = ".." }
xlsynth-pir = { path = "../../xlsynth-pir" }
xlsynth-prover = { path = "../../xlsynth-prover" }

[[bin]]
name = "fuzz_pir_transform_arbitrary"
path = "fuzz_targets/fuzz_pir_transform_arbitrary.rs"
test = false
doc = false

[features]
default = []
has-bitwuzla = ["xlsynth-prover/has-bitwuzla"]
has-boolector = ["xlsynth-prover/has-boolector"]
with-bitwuzla-system = ["has-bitwuzla", "xlsynth-prover/with-bitwuzla-system"]
with-bitwuzla-built = ["has-bitwuzla", "xlsynth-prover/with-bitwuzla-built"]
with-boolector-system = ["has-boolector", "xlsynth-prover/with-boolector-system"]
with-boolector-built = ["has-boolector", "xlsynth-prover/with-boolector-built"]
