[workspace]

[package]
name = "xlsynth-pir-fuzz"
edition = "2021"
publish = false

[package.metadata]
fuzz = true
cargo-fuzz = true

[dependencies]
libfuzzer-sys = { version = "0.4" }
log = "0.4"
env_logger = "0.11"
# Local crates
xlsynth-pir = { path = ".." }
xlsynth = { path = "../../xlsynth" }

# Fuzz targets
[[bin]]
name = "fuzz_ir_verify"
path = "fuzz_targets/fuzz_ir_verify.rs"
test = false
doc = false
