[workspace]

[package]
name = "xlsynth-pir-fuzz"
edition = "2021"
publish = false

[package.metadata]
fuzz = true
cargo-fuzz = true

[dependencies]
libfuzzer-sys = { version = "0.4" }
log = "0.4"
env_logger = "0.11"
blake3 = "1"
blake3 = "1"
# Local crates
xlsynth-pir = { path = ".." }
xlsynth = { path = "../../xlsynth" }
tempfile = "3"

# Fuzz targets
[[bin]]
name = "fuzz_ir_verify"
path = "fuzz_targets/fuzz_ir_verify.rs"
test = false
doc = false

[[bin]]
name = "fuzz_naive_matching_ged"
path = "fuzz_targets/fuzz_naive_matching_ged.rs"
test = false
doc = false

[[bin]]
name = "fuzz_greedy_matching_ged"
path = "fuzz_targets/fuzz_greedy_matching_ged.rs"
test = false
doc = false

[[bin]]
name = "fuzz_block_roundtrip"
path = "fuzz_targets/fuzz_block_roundtrip.rs"
test = false
doc = false
