[package]
name = "xlsynth-vastly-fuzz"
version = "0.56.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1.3", features = ["derive"] }
xlsynth = { path = "../../xlsynth", version = "0.56.0" }
xlsynth-pir = { path = "../../xlsynth-pir", version = "0.56.0" }
xlsynth-autocov = { path = "../../xlsynth-autocov", version = "0.56.0" }
xlsynth-vastly = { path = "..", package = "xlsynth-vastly" }

[lib]
name = "vastly_fuzz"
path = "src/lib.rs"

# Prevent this from interfering with workspace membership.
[workspace]
members = ["."]

[workspace.lints.rust]
warnings = "deny"

[[bin]]
name = "diff_refsim_4value"
path = "fuzz_targets/diff_refsim_4value.rs"
test = false
doc = false

[[bin]]
name = "xls_ir_codegen_semantics"
path = "fuzz_targets/xls_ir_codegen_semantics.rs"
test = false
doc = false
