# SPDX-License-Identifier: Apache-2.0

[package]
name = "xlsynth-pir-compiler-aot-dslx-test-crate"
version = "0.61.0"
edition = "2024"
authors = ["Christopher D. Leary <cdleary@gmail.com>", "Mark Heffernan <meheff@gmail.com>"]
description = "DSLX integration tests for xlsynth-pir-compiler native AOT output"
license = "Apache-2.0"
repository = "https://github.com/xlsynth/xlsynth-crate"
publish = false

[lints]
workspace = true

[dependencies]
xlsynth-pir-compiler-runtime = { path = "../../../xlsynth-pir-compiler-runtime" }

[build-dependencies]
xlsynth-pir-compiler = { path = "../.." }
