# SPDX-License-Identifier: Apache-2.0

[package]
name = "xlsynth-aot-standalone-test-crate"
version = "0.48.0"
edition = "2018"
authors = ["Christopher D. Leary <cdleary@gmail.com>", "Mark Heffernan <meheff@gmail.com>"]
description = "Runtime-dependency smoke tests for standalone xlsynth AOT artifacts"
license = "Apache-2.0"
repository = "https://github.com/xlsynth/xlsynth-crate"

[lints]
workspace = true

[dependencies]
xlsynth-aot-runtime = { path = "../../../xlsynth-aot-runtime" }

[build-dependencies]
xlsynth = { path = "../.." }
